# codex-session-timeline-analyzer

./: .gitignore  CONTRIBUTING.md  OPENAI_OSS_APPLICATION_DRAFT.md  PUBLICATION_CHECKLIST.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  sample-rollout.jsonl
src/codex_session_timeline/: __init__.py  __main__.py  analyzer.py
tests/: test_analyzer.py
