[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "codex-session-timeline-analyzer"
version = "0.1.0"
description = "Read-only Codex Desktop JSONL timeline and bottleneck reports for maintainers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Faizlee" }
]
keywords = ["codex", "openai", "jsonl", "maintainer-tools", "developer-productivity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]

[project.scripts]
codex-session-timeline = "codex_session_timeline.analyzer:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_session_timeline"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
